--- a/css/injector_style.css
+++ b/css/injector_style.css
@@ -1,1 +1,50 @@
-@font-face{src:url("chrome-extension://__MSG_@@extension_id__/font/Ubuntu-B.ttf");font-family:"Ubuntu Bold"}@font-face{src:url("chrome-extension://__MSG_@@extension_id__/font/Ubuntu-L.ttf");font-family:"Ubuntu Light"}#shrub-injection-frame{font-family:"Ubuntu Light";position:fixed;top:50px;left:50px;border-radius:5px;overflow:hidden;z-index:-99;visibility:hidden;width:400px;height:250px;background-color:#eee}#shrub-injection-frame #title-bar{width:100%;height:30px;color:#222;font-size:20px;display:flex;align-items:center;padding:5px;box-sizing:border-box}#shrub-injection-frame #title-bar h1{font-size:20px;margin:0px}#shrub-injection-frame #browser{width:100%;height:220px}#shrub-injection-frame *{padding:0px}
+@font-face {
+  src: url("chrome-extension://pnnlppoeoflpaokcoahkmkoalcohkgja/font/Ubuntu-B.ttf");
+  font-family: "Ubuntu Bold"; }
+@font-face {
+  src: url("chrome-extension://pnnlppoeoflpaokcoahkmkoalcohkgja/font/Ubuntu-L.ttf");
+  font-family: "Ubuntu Light"; }
+#shrub-injection-frame {
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  border-radius: 0px;
+  overflow: hidden;
+  z-index: -99;
+  visibility: hidden;
+  width: 250px;
+  height: 250px; }
+  #shrub-injection-frame #shrub-title-bar {
+    width: 100%;
+    height: 30px;
+    color: #fff;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-family: "Ubuntu Light"; }
+    #shrub-injection-frame #shrub-title-bar h1 {
+      font-size: 20px;
+      margin: 0px; }
+  #shrub-injection-frame #shrub-browser {
+    width: 100%;
+    height: 220px;
+    background-color: #383838;
+    overflow: scroll; }
+    #shrub-injection-frame #shrub-browser .shrub-browser-link {
+      font-family: "Ubuntu Bold";
+      width: 100%;
+      height: 25px;
+      display: flex;
+      align-items: center;
+      font-size: 15px;
+      color: #ff0;
+      padding: 3px; }
+      #shrub-injection-frame #shrub-browser .shrub-browser-link p {
+        float: right; }
+    #shrub-injection-frame #shrub-browser .shrub-browser-link:nth-child(even) {
+      background-color: #444; }
+  #shrub-injection-frame * {
+    padding: 0px; }
