--- a/scss/injector_style.scss
+++ b/scss/injector_style.scss
@@ -1,31 +1,32 @@
 @font-face {
-	src: url('chrome-extension://pnnlppoeoflpaokcoahkmkoalcohkgja/font/Ubuntu-B.ttf');
-	font-family: "Ubuntu Bold";
+	src: url('chrome-extension://keemkifacmkjeminmocpnjcdkhilemgi/font/Ubuntu-M.ttf');
+	font-family: "Ubuntu Medium";
 }
 
 @font-face {
-	src: url('chrome-extension://pnnlppoeoflpaokcoahkmkoalcohkgja/font/Ubuntu-L.ttf');
-	font-family: "Ubuntu Light";
+	src: url('chrome-extension://keemkifacmkjeminmocpnjcdkhilemgi/font/Ubuntu-LI.ttf');
+	font-family: "Ubuntu Light Italic";
 }
 
 $frame-width: 250px;
-$frame-height: 250px;
-$frame-radius: 0px;
+$frame-radius: 5px;
 
-$highlight-color: #ff0;
-$title-color: rgba(0, 0, 0, 0.7);
-$title-text-color: #fff;
+$highlight-color: #1DD34B;
+$frame-color: rgba(0, 0, 0, 0.7);
+$link-text-color: #aaa;
+$link-title-color: #fff;
 $browser-color: #383838;
 
 $title-bar-height: 30px;
 $title-size: 20px;
-$browser-height: $frame-height - $title-bar-height;
-$link-height: 25px;
-$link-color: #444;
+$link-height: 50px;
+$browser-height: 8 * $link-height;
+$link-highlight-color: #444;
 $link-font-size: 15px;
-$link-padding: 3px;
+$link-right-margin: 7px;
 
 #shrub-injection-frame {
+	-webkit-font-smoothing: antialiased;
 	position: fixed;
 	top: 50px;
 	left: 50px;
@@ -34,19 +35,18 @@ $link-padding: 3px;
 	z-index: -99;
 	visibility: hidden;
 	width: $frame-width;
-	height: $frame-height;
+	background-color: $frame-color;
 
 	#shrub-title-bar {
 		width: 100%;
 		height: $title-bar-height;
-		color: $title-text-color;
+		color: $highlight-color;
 		font-size: $title-size;
 		display: flex;
 		align-items: center;
 		padding: 5px;
 		box-sizing: border-box;
-		background-color: $title-color;
-		font-family: "Ubuntu Light";
+		font-family: "Ubuntu Medium";
 
 		h1 {
 			font-size: $title-size;
@@ -56,31 +56,43 @@ $link-padding: 3px;
 
 	#shrub-browser {
 		width: 100%;
-		height: $browser-height;
+		max-height: $browser-height;
+		min-height: $link-height;
 		background-color: $browser-color;
+		border-radius: $frame-radius;
 		overflow: scroll;
+		direction: rtl;
 
 		.shrub-browser-link {
-			font-family: "Ubuntu Bold";
+			font-family: "Ubuntu Light Italic";
 			width: 100%;
 			height: $link-height;
+			font-size: $link-font-size;
+			color: $link-text-color;
 			display: flex;
 			align-items: center;
-			font-size: $link-font-size;
-			color: $highlight-color;
-			padding: $link-padding;
+			direction: ltr;
 
-			p {
-				float: right;
+			.shrub-browser-link-text {
+				margin-right: 10px;
+				text-align: right;
+				margin-left: auto;
+
+				p:nth-child(1) {
+					font-family: "Ubuntu Medium";
+					color: $link-title-color;
+				}
 			}
-		}
 
-		.shrub-browser-link:nth-child(even) {
-			background-color: #444;
+			&:hover {
+				background-color: $link-highlight-color;
+				cursor: pointer;
+			}
 		}
 	}
 
 	* {
 		padding: 0px;
+		margin: 0px;
 	}
 }
