--- a/css/injector_style.css
+++ b/css/injector_style.css
@@ -14,24 +14,28 @@
   z-index: -99;
   visibility: hidden;
   width: 250px;
-  background-color: rgba(0, 0, 0, 0.7); }
+  background-color: rgba(0, 0, 0, 0.6); }
   #shrub-injection-frame #shrub-title-bar {
     width: 100%;
     height: 30px;
-    color: #1DD34B;
+    color: #00F8FF;
     font-size: 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 5px;
     box-sizing: border-box;
     font-family: "Ubuntu Medium"; }
-    #shrub-injection-frame #shrub-title-bar h1 {
+    #shrub-injection-frame #shrub-title-bar #shrub-title-text {
       font-size: 20px;
       margin: 0px; }
+    #shrub-injection-frame #shrub-title-bar #shrub-version-text {
+      font-family: "Ubuntu Light Italic";
+      text-decoration: none; }
   #shrub-injection-frame #shrub-browser {
     width: 100%;
-    max-height: 400px;
-    min-height: 50px;
+    max-height: 157.5px;
+    min-height: 45px;
     background-color: #383838;
     border-radius: 5px;
     overflow: scroll;
@@ -39,7 +43,7 @@
     #shrub-injection-frame #shrub-browser .shrub-browser-link {
       font-family: "Ubuntu Light Italic";
       width: 100%;
-      height: 50px;
+      height: 45px;
       font-size: 15px;
       color: #aaa;
       display: flex;
@@ -51,7 +55,8 @@
         margin-left: auto; }
         #shrub-injection-frame #shrub-browser .shrub-browser-link .shrub-browser-link-text p:nth-child(1) {
           font-family: "Ubuntu Medium";
-          color: #fff; }
+          color: #fff;
+          margin-bottom: -3px; }
       #shrub-injection-frame #shrub-browser .shrub-browser-link:hover {
         background-color: #444;
         cursor: pointer; }
