There's a few bugs I'm still hunting down, but I think Shrub is more or less done now. I got the interface running on more than just dummy links, which is good. I also ended up needing to change the system so that it was able to cache page names as well. At some point, I might end up adding favicons, but I don't think that's neccesary for now.

--- a/css/injector_style.css
+++ b/css/injector_style.css
@@ -52,7 +52,9 @@
       #shrub-injection-frame #shrub-browser .shrub-browser-link .shrub-browser-link-text {
         margin-right: 10px;
         text-align: right;
-        margin-left: auto; }
+        margin-left: auto;
+        white-space: nowrap;
+        overflow: hidden; }
         #shrub-injection-frame #shrub-browser .shrub-browser-link .shrub-browser-link-text p:nth-child(1) {
           font-family: "Ubuntu Medium";
           color: #fff;
