I thought I should probably get around to adding a tab popup, so I did that. Nothing too fancy.

--- a/scss/injector_style.scss
+++ b/scss/injector_style.scss
@@ -19,6 +19,7 @@ $browser-color: #383838;
 
 $title-bar-height: 30px;
 $title-size: 20px;
+$version-font-size: 15px;
 $link-height: 45px;
 $browser-height: 3.5 * $link-height; // If it's a whole multiple it isn't clear that the box is scrollable
 $link-highlight-color: #444;
@@ -57,6 +58,7 @@ $link-right-margin: 7px;
 		#shrub-version-text {
 			font-family: "Ubuntu Light Italic";
 			text-decoration: none;
+			font-size: $version-font-size;
 		}
 	}
 
