--- a/scss/injector_style.scss
+++ b/scss/injector_style.scss
@@ -1,10 +1,10 @@
 @font-face {
-	src: url('chrome-extension://keemkifacmkjeminmocpnjcdkhilemgi/font/Ubuntu-M.ttf');
+	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-M.ttf');
 	font-family: "Ubuntu Medium";
 }
 
 @font-face {
-	src: url('chrome-extension://keemkifacmkjeminmocpnjcdkhilemgi/font/Ubuntu-LI.ttf');
+	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-LI.ttf');
 	font-family: "Ubuntu Light Italic";
 }
 
