--- a/scss/popup_style.scss
+++ b/scss/popup_style.scss
@@ -1,10 +1,10 @@
 @font-face {
-	src: url('chrome-extension://keemkifacmkjeminmocpnjcdkhilemgi/font/Ubuntu-M.ttf');
+	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-M.ttf');
 	font-family: "Ubuntu Medium";
 }
 
 @font-face {
-	src: url('chrome-extension://keemkifacmkjeminmocpnjcdkhilemgi/font/Ubuntu-L.ttf');
+	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-L.ttf');
 	font-family: "Ubuntu Light";
 }
 
