--- a/scss/popup_style.scss
+++ b/scss/popup_style.scss
@@ -8,6 +8,11 @@
 	font-family: "Ubuntu Light";
 }
 
+@font-face {
+	src: url('chrome-extension://__MSG_@@extension_id__/font/Ubuntu-BI.ttf');
+	font-family: "Ubuntu Bold Italic";
+}
+
 $popupWidth: 500px;
 $popupHeight: 300px;
 
@@ -85,7 +90,7 @@ body {
 		}
 
 		span.highlight {
-			font-family: "Ubuntu Medium";
+			font-family: "Ubuntu Bold Italic";
 		}
 
 		a {
