I'm just tweaking design stuff (i like this new style the most)

--- a/scss/injector_style.scss
+++ b/scss/injector_style.scss
@@ -10,10 +10,10 @@
 
 $frame-width: 250px;
 $frame-radius: 5px;
-$frame-color: rgba(0, 0, 0, 0.5);
+$frame-color: #333;
 
-$highlight-color: #18FF00;
-$title-color: #fff;
+$highlight-color: #79C3C4;
+$title-color: #79C3C4;
 $link-text-color: #aaa;
 $link-title-color: #666;
 $browser-color: #eee;
