--- a/scss/popup_style.scss
+++ b/scss/popup_style.scss
@@ -19,7 +19,7 @@ $popupHeight: 300px;
 $sidebarWidth: 150px;
 $pageWidth: $popupWidth - $sidebarWidth;
 
-$sidebarColor: #fff;
+$sidebarColor: #f8f8f8;
 $sidebarTextColor: #383838;
 $sidebarFontSize: 20px;
 $tabHeight: 50px;
